# ai-image-renamer-cli

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  main.py  pyproject.toml
Formula/: ai-image-renamer.rb
src/ai_image_renamer/: __init__.py  cli.py  renamer.py  utils.py
tests/: __init__.py  test_cli.py  test_renamer.py  test_utils.py
