[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ai-image-renamer"
version = "1.2.0"
description = "Rename images based on AI-generated descriptions."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
    { name = "Kolja Nolte", email = "kolja.nolte@gmail.com" }
]
license = "MIT"
keywords = ["ai", "image", "renamer", "cli", "groq", "llama", "photos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "groq>=1.1.2",
    "filetype>=1.2.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
"Homepage" = "https://docs.kolja-nolte.com/ai-image-renamer-cli"
"Documentation" = "https://docs.kolja-nolte.com/ai-image-renamer-cli"
"Repository" = "https://gitlab.com/thaikolja/ai-image-renamer.git"
"Changelog" = "https://gitlab.com/thaikolja/ai-image-renamer/-/blob/main/CHANGELOG.md"
"Issues" = "https://gitlab.com/thaikolja/ai-image-renamer/-/issues"

[project.scripts]
rename-images = "ai_image_renamer.cli:main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.optional-dependencies]
test = [
    "pytest",
]
